force-app/main/default/objects/Equipment_Declaration__c/Equipment_Declaration__c.object-meta.xml
<CustomObject>
    <description>Custom object that allows Partners to enter the Equipment they are servicing via SalesForce Partner Portal.</description>
    <label>Equipment</label>
    <nameField>
        <label>Serial Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Equipment</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>