force-app/main/default/objects/Equipment_Declaration__c/fields/Active_Unit__c.field-meta.xml
<CustomField>
    <fullName>Active_Unit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Unit</label>
    <type>Checkbox</type>
</CustomField>