force-app/main/default/objects/Equipment_Declaration__c/fields/Annual_Fee__c.field-meta.xml
<CustomField>
    <fullName>Annual_Fee__c</fullName>
    <inlineHelpText>This is the annual fee that is invoiced to the partner for participation in the hardware service program.</inlineHelpText>
    <label>Annual Fee</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>