force-app/main/default/objects/Equipment_Declaration__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <label>Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2004</fullName>
            </value>
            <value>
                <fullName>2008</fullName>
            </value>
            <value>
                <fullName>2012</fullName>
            </value>
            <value>
                <fullName>2014</fullName>
            </value>
            <value>
                <fullName>2016</fullName>
            </value>
            <value>
                <fullName>2214</fullName>
            </value>
            <value>
                <fullName>2215</fullName>
            </value>
            <value>
                <fullName>5001</fullName>
            </value>
            <value>
                <fullName>5003</fullName>
            </value>
            <value>
                <fullName>5004</fullName>
            </value>
            <value>
                <fullName>5006</fullName>
            </value>
            <value>
                <fullName>5007</fullName>
            </value>
            <value>
                <fullName>5008</fullName>
            </value>
            <value>
                <fullName>5302</fullName>
            </value>
            <value>
                <fullName>5305</fullName>
            </value>
            <value>
                <fullName>5362</fullName>
            </value>
            <value>
                <fullName>5588</fullName>
            </value>
            <value>
                <fullName>5663</fullName>
            </value>
            <value>
                <fullName>5670</fullName>
            </value>
            <value>
                <fullName>5674</fullName>
            </value>
            <value>
                <fullName>5675</fullName>
            </value>
            <value>
                <fullName>5684</fullName>
            </value>
            <value>
                <fullName>5685</fullName>
            </value>
            <value>
                <fullName>5688</fullName>
            </value>
            <value>
                <fullName>5840</fullName>
            </value>
            <value>
                <fullName>5870</fullName>
            </value>
            <value>
                <fullName>5871</fullName>
            </value>
            <value>
                <fullName>5873</fullName>
            </value>
            <value>
                <fullName>5874</fullName>
            </value>
            <value>
                <fullName>5875</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>