force-app/main/default/objects/Equipment_Declaration__c/fields/Class_Type__c.field-meta.xml
<CustomField>
    <fullName>Class_Type__c</fullName>
    <label>Class Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Class__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Easy Point</fullName>
            </value>
            <value>
                <fullName>Multi Function</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Single Function</fullName>
            </value>
            <value>
                <fullName>Teller Recycler</fullName>
            </value>
            <value>
                <fullName>SelfServ LE</fullName>
            </value>
            <value>
                <fullName>Financial Kiosk</fullName>
            </value>
            <value>
                <fullName>56XX &amp; Personas CD</fullName>
            </value>
            <value>
                <fullName>SelfServ CD</fullName>
            </value>
            <value>
                <fullName>56XX and Personas FF</fullName>
            </value>
            <value>
                <fullName>SelfServ FF</fullName>
            </value>
            <value>
                <fullName>Teller Cash Recycler</fullName>
            </value>
            <value>
                <fullName>Deposit Automation</fullName>
            </value>
            <value>
                <fullName>APTRA Interactive Teller</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>