force-app/main/default/objects/Equipment_Declaration__c/fields/FDIC__c.field-meta.xml
<CustomField>
    <fullName>FDIC__c</fullName>
    <label>FDIC#</label>
    <length>10</length>
    <type>Text</type>
</CustomField>