force-app/main/default/objects/Equipment_Declaration__c/fields/Features__c.field-meta.xml
<CustomField>
    <fullName>Features__c</fullName>
    <label>Features</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Class__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Deposit Automation</fullName>
            </value>
            <value>
                <fullName>Envelope Deposit</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Cash Dispense</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>