force-app/main/default/objects/Equipment_Declaration__c/fields/Installation_Address1__c.field-meta.xml
<CustomField>
    <fullName>Installation_Address1__c</fullName>
    <label>Installation Address1</label>
    <length>250</length>
    <required>true</required>
    <type>Text</type>
</CustomField>