force-app/main/default/objects/Equipment_Declaration__c/fields/Installation_Address2__c.field-meta.xml
<CustomField>
    <fullName>Installation_Address2__c</fullName>
    <label>Installation Address2</label>
    <length>200</length>
    <type>Text</type>
</CustomField>