force-app/main/default/objects/Equipment_Declaration__c/fields/Installation_City__c.field-meta.xml
<CustomField>
    <fullName>Installation_City__c</fullName>
    <label>Installation City</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>