force-app/main/default/objects/Equipment_Declaration__c/fields/Installation_Date_of_New_Unit__c.field-meta.xml
<CustomField>
    <fullName>Installation_Date_of_New_Unit__c</fullName>
    <label>Installation Date of New Unit</label>
    <type>Date</type>
</CustomField>