force-app/main/default/objects/Equipment_Declaration__c/fields/Installation_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Installation_Postal_Code__c</fullName>
    <label>Installation Postal Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>