force-app/main/default/objects/Equipment_Declaration__c/fields/NameAndAccount__c.field-meta.xml
<CustomField>
    <fullName>NameAndAccount__c</fullName>
    <formula>Name  &amp;  Partner_Account__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NameAndAccount</label>
    <type>Text</type>
</CustomField>