force-app/main/default/objects/Equipment_Declaration__c/fields/NCUA__c.field-meta.xml
<CustomField>
    <fullName>NCUA__c</fullName>
    <label>NCUA#</label>
    <length>10</length>
    <type>Text</type>
</CustomField>