force-app/main/default/objects/Equipment_Declaration__c/fields/Previous_Service_Provider__c.field-meta.xml
<CustomField>
    <fullName>Previous_Service_Provider__c</fullName>
    <label>Previous Service Provider</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Diebold</fullName>
            </value>
            <value>
                <fullName>Fujitsu</fullName>
            </value>
            <value>
                <fullName>HP</fullName>
            </value>
            <value>
                <fullName>IBM</fullName>
            </value>
            <value>
                <fullName>NCR Corp</fullName>
            </value>
            <value>
                <fullName>Teaming Agreement with NCR</fullName>
            </value>
            <value>
                <fullName>Wincor</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>