force-app/main/default/objects/Equipment_Declaration__c/fields/Previous_Service_Provider_If_Other__c.field-meta.xml
<CustomField>
    <fullName>Previous_Service_Provider_If_Other__c</fullName>
    <label>Previous Service Provider (If Other)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>