force-app/main/default/objects/Equipment_Declaration__c/fields/Pricing_Code__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Code__c</fullName>
    <inlineHelpText>This field indicates the pricing category.</inlineHelpText>
    <label>Pricing Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Affinity</fullName>
            </value>
            <value>
                <fullName>Legacy</fullName>
            </value>
            <value>
                <fullName>List</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>