force-app/main/default/objects/Equipment_Declaration__c/fields/Service_Assumption_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Assumption_Date__c</fullName>
    <label>Service Assumption Date</label>
    <type>Date</type>
</CustomField>