force-app/main/default/objects/Equipment_Declaration__c/fields/Service_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Date__c</fullName>
    <inlineHelpText>Provide the failure or error reported, as well as a brief summary of the corrective action and final resolution for the service call.  This information is required for evaluating approval of this request.</inlineHelpText>
    <label>Service Date</label>
    <type>Date</type>
</CustomField>