force-app/main/default/objects/Equipment_Declaration__c/fields/SWIFT_CODE__c.field-meta.xml
<CustomField>
    <fullName>SWIFT_CODE__c</fullName>
    <label>SWIFT CODE</label>
    <length>10</length>
    <type>Text</type>
</CustomField>