force-app/main/default/objects/Equipment_Declaration__c/fields/Was_the_unit_sold_by_you__c.field-meta.xml
<CustomField>
    <fullName>Was_the_unit_sold_by_you__c</fullName>
    <label>Was the unit sold by you?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>