force-app/main/default/objects/Equipment_Declaration__c/validationRules/Duplicate_Record_Check_on_Equipment.validationRule-meta.xml
<ValidationRule>
    <fullName>Duplicate_Record_Check_on_Equipment</fullName>
    <active>false</active>
    <errorConditionFormula>VLOOKUP( $ObjectType.Equipment_Declaration__c.Fields.Name, $ObjectType.Equipment_Declaration__c.Fields.Name ,   NameAndAccount__c ) =  Name</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Equipment with same same Serial Number and same Partner Account Already exists. Please specify another Serial Number.</errorMessage>
</ValidationRule>