force-app/main/default/objects/Equipment_Declaration__c/validationRules/Previous_Service_Provider_If_Other.validationRule-meta.xml
<ValidationRule>
    <fullName>Previous_Service_Provider_If_Other</fullName>
    <active>true</active>
    <description>&quot;Previous Service Provider(if other)&quot; becomes mandatory if &quot;other&quot; is selected in &quot;Previous Service Provider&quot;  picklist.</description>
    <errorConditionFormula>ISPICKVAL(Previous_Service_Provider__c,&apos;Other&apos;) &amp;&amp;  ISBLANK(Previous_Service_Provider_If_Other__c)</errorConditionFormula>
    <errorDisplayField>Previous_Service_Provider_If_Other__c</errorDisplayField>
    <errorMessage>Required if selected &quot;Other&quot; above</errorMessage>
</ValidationRule>