force-app/main/default/objects/Equipment_Declaration__c/validationRules/Previous_Service_Provider_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Previous_Service_Provider_mandatory</fullName>
    <active>true</active>
    <description>if the Service Assumption Date is input by the Partner user, the Previous Service Provider field should be required.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(Service_Assumption_Date__c)),(Service_Assumption_Date__c &gt; DATE(2017, 08, 23)), ISBLANK( TEXT(Previous_Service_Provider__c)) )</errorConditionFormula>
    <errorMessage>Please select Previous Service Provider.</errorMessage>
</ValidationRule>