force-app/main/default/objects/Equipment_Declaration__c/listViews/Demo_Equipment.listView-meta.xml
<ListView>
    <fullName>Demo_Equipment</fullName>
    <columns>OBJECT_ID</columns>
    <columns>Partner_Account__c</columns>
    <columns>Active_Unit__c</columns>
    <columns>Country_Code__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Pricing_Code__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Demo Equipment</label>
    <language>en_US</language>
</ListView>